--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,8 +1,8 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install"
+buildCommand = "npm install --production"
 
 [deploy]
 startCommand = "npm start"
 healthcheckPath = "/health"
-healthcheckTimeout = 100 
+healthcheckTimeout = 100
